[package]
name = "porridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "porddige"
path = "src/lib.rs"

[[bin]]
name = "porridge_bin"
path = "src/main.rs"

[dependencies]
warp = "0.3.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
serde_json = "1.0"
